--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@expo/vector-icons": "^13.0.0",
 		"@react-native-async-storage/async-storage": "^1.17.11",
 		"expo": "^47.0.0",
 		"react": "18.1.0",
@@ -17,8 +18,8 @@
 		"eslint-config-prettier": "^8.7.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-native": "^4.0.0",
-    "lint-staged": "^12.3.7",
 		"husky": "^7.0.1",
+		"lint-staged": "^12.3.7",
 		"prettier": "^2.8.4",
 		"prettier-plugin-sort-json": "^1.0.0",
 		"typescript": "^4.6.3"
